@@ -1,3 +1,7 @@
+2010-01-14  Kai Tietz  <kai.tietz@onevision.com>
+
+        * tchar.h (PTCHAR, TBYTE, PTBYTE): Added.
+
 2010-01-07  Jonathan Yong  <jon_y@users.sourceforge.net>
 
 	* math.h (sin): Add GCC pure attribute.
